# amazon_ml_2024

./: .gitignore  HowToRun.md  pyproject.toml  requirements.txt
notebooks/: amazon_ml_on_colab.ipynb  explore.ipynb  image_download.ipynb  ocr1.ipynb
src/: dataset.py  test.ipynb  test.py  utils.py
