[tool.poetry]
name = "amazon-ml"
version = "0.1.0"
description = ""
authors = ["SurajAiri <surajairi.ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.1.1"
tqdm = "^4.66.5"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
