[tool.poetry]
name = "amazon-ml"
version = "0.1.0"
description = ""
authors = ["SurajAiri <surajairi.ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.1.1"
tqdm = "^4.66.5"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
easyocr = "^1.7.1"
matplotlib = "^3.9.2"
pytesseract = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
